# etl-pipeline-for-ecommerce-data

./: .env_example  .gitlint  .pre-commit-config.yaml  Makefile  README.md  config.py  main.py  pyproject.toml
data/: ecommerce_pipeline.db  users_data.json
sql/: schema_mssql_ddl.sql  schema_postgresql_ddl.sql  schema_sqlite_ddl.sql
src/: extract.py  load.py  logging_setup.py  transform.py
